--- a/ssd1306_test.ioc
+++ b/ssd1306_test.ioc
@@ -11,16 +11,36 @@ Mcu.IP3=SYS
 Mcu.IPNb=4
 Mcu.Name=STM32F107V(B-C)Tx
 Mcu.Package=LQFP100
-Mcu.Pin0=OSC_IN
-Mcu.Pin1=OSC_OUT
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin3=PB0
-Mcu.Pin4=PA13
-Mcu.Pin5=PA14
-Mcu.Pin6=PB8
-Mcu.Pin7=PB9
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin0=PE2
+Mcu.Pin1=PE3
+Mcu.Pin10=PE8
+Mcu.Pin11=PE9
+Mcu.Pin12=PE10
+Mcu.Pin13=PE11
+Mcu.Pin14=PE12
+Mcu.Pin15=PE13
+Mcu.Pin16=PE14
+Mcu.Pin17=PE15
+Mcu.Pin18=PD12
+Mcu.Pin19=PD13
+Mcu.Pin2=PE4
+Mcu.Pin20=PD14
+Mcu.Pin21=PD15
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=PE0
+Mcu.Pin27=PE1
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin3=PE5
+Mcu.Pin4=PE6
+Mcu.Pin5=OSC_IN
+Mcu.Pin6=OSC_OUT
+Mcu.Pin7=PA0-WKUP
+Mcu.Pin8=PB0
+Mcu.Pin9=PE7
+Mcu.PinsNb=29
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F107VCTx
@@ -67,6 +87,54 @@ PCC.Seq0=0
 PCC.Series=STM32F1
 PCC.Temperature=25
 PCC.Vdd=3.3
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=LCD_WR
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=LCD_RD
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=LCD_CS
+PD14.Locked=true
+PD14.Signal=GPIO_Output
+PD15.GPIOParameters=GPIO_Label
+PD15.GPIO_Label=LCD_RS
+PD15.Locked=true
+PD15.Signal=GPIO_Output
+PE0.Locked=true
+PE0.Signal=GPIO_Output
+PE1.Locked=true
+PE1.Signal=GPIO_Output
+PE10.Locked=true
+PE10.Signal=GPIO_Output
+PE11.Locked=true
+PE11.Signal=GPIO_Output
+PE12.Locked=true
+PE12.Signal=GPIO_Output
+PE13.Locked=true
+PE13.Signal=GPIO_Output
+PE14.Locked=true
+PE14.Signal=GPIO_Output
+PE15.Locked=true
+PE15.Signal=GPIO_Output
+PE2.Locked=true
+PE2.Signal=GPIO_Output
+PE3.Locked=true
+PE3.Signal=GPIO_Output
+PE4.Locked=true
+PE4.Signal=GPIO_Output
+PE5.Locked=true
+PE5.Signal=GPIO_Output
+PE6.Locked=true
+PE6.Signal=GPIO_Output
+PE7.Locked=true
+PE7.Signal=GPIO_Output
+PE8.Locked=true
+PE8.Signal=GPIO_Output
+PE9.Locked=true
+PE9.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
